format report lab1

--- a/lab1.tex
+++ b/lab1.tex
@@ -64,7 +64,7 @@ The reason for this is that the learning rate is too high, causing the algorithm
 
 \section{Conclusion}
 
-In this labwork, I implemented the gradient descent algorithm to minimize the function $f(x) = x^4$.
+In this labwork, I implemented the gradient descent algorithm to minimize the function $f(x) = x^4$.\\
 The result is that the algorithm converged to a minimum value of $f(x)$ at $x \approx 0.4$ with a final function value of approximately $0.0256$.\\
 \\
 An interesting finding is that the choice of learning rate significantly affects the convergence speed and stability of the algorithm. A smaller learning rate leads to slower convergence, while a larger one may cause divergence.
